freest/test/prog/Valid/Functional/MainMissing/MainMissing.fst
module MainMissing where

f : Int
f = 2
