freest/test/prog/Invalid/Typing/VarOutOfScope/VarOutOfScope.fst
module VarOutOfScope where

foo : Int
foo = bar
